// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic kind, both opt-ins > writes the expected tree and generated files > config.py 1`] = `
""""The Acme Mail app's kit config — the whole per-vendor surface, stated once.

Everything the kit needs from this app is on this one object: identity, port, paths,
prompt prose, and the callables behind the three run modes. The kit never discovers a
config; \`app/__main__.py\` hands it this one.
"""

from __future__ import annotations

from pathlib import Path

from a2ui_agent_kit.config import AgentAppConfig
from a2ui_agent_kit.paint_meta import require_carries_action

from app import prose
from app.card import APP_DESCRIPTION, APP_NAME, SKILLS
from app.responses import build_response, build_text_response
from app.tools import STUB_TOOLS

_AGENT_DIR = Path(__file__).resolve().parents[1]  # acme-mail/agent/
_APP_PKG = Path(__file__).resolve().parent  # acme-mail/agent/app/


def _live_toolset():
    # Deferred: app.mcp pulls google.adk, which deterministic and stub runs never pay for.
    from app.mcp import build_live_toolset

    return build_live_toolset()


CONFIG = AgentAppConfig(
    name=APP_NAME,
    description=APP_DESCRIPTION,
    skills=SKILLS,
    default_port=11004,
    responder_app_name="a2ui_acme_mail_live",
    adk_agent_name="a2ui_acme_mail_live_agent",
    app_dir=_AGENT_DIR,
    catalog_path=_AGENT_DIR.parent / "acme-mail-catalog" / "catalogs" / "v0.9.1" / "catalog.json",
    catalog_kind="basic",
    examples_dir=_APP_PKG / "knowledge" / "examples",
    role_description=prose.ROLE_DESCRIPTION,
    workflow_descriptions=(
        prose.WORKFLOW_DESCRIPTION,
        prose.SHELL_DESCRIPTION,
        prose.SCOPE_DESCRIPTION,
    ),
    examples_framing=prose.EXAMPLES_FRAMING,
    brand_guidance_path=_APP_PKG / "knowledge" / "brand-guidance.md",
    domain_knowledge_path=_APP_PKG / "knowledge" / "acme-mail-domain.md",
    build_response=build_response,
    build_text_response=build_text_response,
    question_policy=require_carries_action,
    stub_tools=STUB_TOOLS,
    live_toolset_factory=_live_toolset,
)
"
`;

exports[`basic kind, both opt-ins > writes the expected tree and generated files > files 1`] = `
[
  "acme-mail-catalog/.gitignore",
  "acme-mail-catalog/README.md",
  "acme-mail-catalog/catalogs/v0.9.1/catalog.json",
  "acme-mail-catalog/package.json",
  "acme-mail-catalog/scripts/copy-theme.mjs",
  "acme-mail-catalog/src/catalog-id.ts",
  "acme-mail-catalog/src/catalog.parity.test.ts",
  "acme-mail-catalog/src/catalog.ts",
  "acme-mail-catalog/src/css.d.ts",
  "acme-mail-catalog/src/index.ts",
  "acme-mail-catalog/src/provider.test.tsx",
  "acme-mail-catalog/src/provider.tsx",
  "acme-mail-catalog/src/theme.css",
  "acme-mail-catalog/tsconfig.json",
  "acme-mail-catalog/vitest.config.ts",
  "acme-mail-catalog/vitest.setup.ts",
  "agent/.env.example",
  "agent/.gitignore",
  "agent/.python-version",
  "agent/README.md",
  "agent/app/__init__.py",
  "agent/app/__main__.py",
  "agent/app/card.py",
  "agent/app/config.py",
  "agent/app/fixtures/deterministic/greet.json",
  "agent/app/fixtures/deterministic/greeting.json",
  "agent/app/fixtures/stub/greeting.json",
  "agent/app/knowledge/acme-mail-domain.md",
  "agent/app/knowledge/brand-guidance.md",
  "agent/app/knowledge/examples/greeting.json",
  "agent/app/mcp.py",
  "agent/app/prose.py",
  "agent/app/responses.py",
  "agent/app/tools.py",
  "agent/pyproject.toml",
  "agent/scripts/record_beats.py",
  "agent/tests/__init__.py",
  "agent/tests/helpers.py",
  "agent/tests/test_agent_card.py",
  "agent/tests/test_catalog.py",
  "agent/tests/test_conformance.py",
  "agent/tests/test_executor.py",
  "agent/tests/test_knowledge_examples.py",
  "agent/tests/test_llm_agent.py",
  "agent/tests/test_llm_prompt.py",
  "agent/tests/test_llm_tools.py",
  "agent/tests/test_responses.py",
  "agent/tests/test_server.py",
  "manifest.json",
]
`;

exports[`basic kind, both opt-ins > writes the expected tree and generated files > manifest.json 1`] = `
"{
  "$comment": "Placeholder until the sdk manifest schema lands (Phase 9); mirrors the orchestrator's registry record.",
  "id": "acme-mail",
  "displayName": "Acme Mail",
  "agent": {
    "url": "http://localhost:11004",
    "auth": "none"
  },
  "catalog": {
    "id": "https://github.com/example/apps/blob/main/acme-mail/acme-mail-catalog/catalogs/v0.9.1/catalog.json",
    "package": "acme-mail-catalog"
  }
}
"
`;

exports[`basic kind, both opt-ins > writes the expected tree and generated files > mcp.py 1`] = `
""""Live Acme Mail MCP toolset, with the kit's opt-in Google ADC credential block.

The credential is Application Default Credentials (\`a2ui_agent_kit.google_adc\`): minted
once by a developer outside the agent (\`gcloud auth application-default login\`), read and
refreshed by the library, never a client secret or a consent flow. Every failure fails
fast rather than degrading to canned data — the stub is only ever \`--mode stub\`.

TODO: set MCP_URL and SCOPES for Acme Mail's MCP server, then delete the not-wired guard.
"""

from __future__ import annotations

from google.adk.tools.mcp_tool import StreamableHTTPConnectionParams

from a2ui_agent_kit import google_adc
from a2ui_agent_kit.google_adc import MissingGoogleCredentialError, mcp_headers
from a2ui_agent_kit.toolset import PolicyMcpToolset

__all__ = [
    "MCP_URL",
    "SCOPES",
    "LiveToolsetNotWiredError",
    "MissingGoogleCredentialError",
    "access_token",
    "build_live_toolset",
    "quota_project",
]

# TODO: the Acme Mail MCP server's streamable-HTTP endpoint.
MCP_URL = ""

# TODO: the OAuth scopes the credential must carry for that server.
SCOPES: tuple[str, ...] = ()

# Optional: pin the tool inventory client-side (\`tool_filter\`) once you know which of the
# server's tools this agent should hold. Empty means every tool the server exposes.
TOOL_FILTER: tuple[str, ...] = ()


class LiveToolsetNotWiredError(RuntimeError):
    """Raised by \`--mode live\` until MCP_URL and SCOPES are set."""


def quota_project() -> str:
    """The project billed for the call, sent as X-Goog-User-Project."""
    return google_adc.quota_project("Acme Mail")


def access_token() -> str:
    """Mints a fresh access token from ADC, failing fast rather than degrading to canned data."""
    return google_adc.access_token(SCOPES, "Acme Mail")


def build_live_toolset() -> PolicyMcpToolset:
    """Constructs the live MCP toolset. Construction is offline: the toolset stores its
    connection parameters and connects only when its tools are first listed."""
    if not MCP_URL or not SCOPES:
        raise LiveToolsetNotWiredError(
            "--mode live is not wired yet: set MCP_URL and SCOPES in app/mcp.py to "
            "Acme Mail's MCP server. Until then, run with --mode stub or --mode deterministic."
        )
    return PolicyMcpToolset(
        connection_params=StreamableHTTPConnectionParams(
            url=MCP_URL,
            headers=mcp_headers(access_token(), quota_project()),
        ),
        tool_filter=list(TOOL_FILTER) or None,
    )
"
`;

exports[`basic kind, both opt-ins > writes the expected tree and generated files > pyproject.toml 1`] = `
"[project]
name = "a2ui-acme-mail-agent"
version = "0.1.0"
description = "The Acme Mail app's A2A agent, built on a2ui-agent-kit."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2ui-agent-kit",
    "a2ui-agent-sdk>=0.2.4,<0.3.0",
    "a2a-sdk[http-server]>=0.3.0,<0.4.0",
    "google-adk>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.40.0",
    "click>=8.1.8",
    "mcp>=1.28.1,<2.0.0",
]

[tool.uv]
package = false

# The kit, pinned to the commit these files were scaffolded against. Move the pin
# deliberately: the app's config, prompt prose, and tests follow the kit's surface at
# that commit.
[tool.uv.sources]
a2ui-agent-kit = { git = "https://github.com/retz8/a2uiverse-apps", subdirectory = "agent-kit", rev = "0123456789abcdef0123456789abcdef01234567" }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # Third-party: starlette's TestClient deprecates its httpx backend. Not our code.
    "ignore:Using \`httpx\` with \`starlette.testclient\` is deprecated",
]
"
`;

exports[`custom kind, no opt-ins > writes the expected tree and generated files > config.py 1`] = `
""""The Acme Mail app's kit config — the whole per-vendor surface, stated once.

Everything the kit needs from this app is on this one object: identity, port, paths,
prompt prose, and the callables behind the three run modes. The kit never discovers a
config; \`app/__main__.py\` hands it this one.
"""

from __future__ import annotations

from pathlib import Path

from a2ui_agent_kit.config import AgentAppConfig

from app import prose
from app.card import APP_DESCRIPTION, APP_NAME, SKILLS
from app.responses import build_response, build_text_response
from app.tools import STUB_TOOLS

_AGENT_DIR = Path(__file__).resolve().parents[1]  # acme-mail/agent/
_APP_PKG = Path(__file__).resolve().parent  # acme-mail/agent/app/


def _live_toolset():
    # Deferred: app.mcp pulls google.adk, which deterministic and stub runs never pay for.
    from app.mcp import build_live_toolset

    return build_live_toolset()


def _no_question_policy(payload: list[dict], metas: dict[str, dict]) -> None:
    """This agent does not emit the paintMeta shell convention, so no declared question
    ever reaches this policy. Opt in by naming one of the kit's policies
    (\`a2ui_agent_kit.paint_meta\`) here and adding \`prose.SHELL_DESCRIPTION\` to the
    workflow blocks below.
    """
    return None


CONFIG = AgentAppConfig(
    name=APP_NAME,
    description=APP_DESCRIPTION,
    skills=SKILLS,
    default_port=11004,
    responder_app_name="a2ui_acme_mail_live",
    adk_agent_name="a2ui_acme_mail_live_agent",
    app_dir=_AGENT_DIR,
    catalog_path=_AGENT_DIR.parent / "acme-mail-catalog" / "catalogs" / "v0.9.1" / "catalog.json",
    catalog_kind="custom",
    examples_dir=_APP_PKG / "knowledge" / "examples",
    role_description=prose.ROLE_DESCRIPTION,
    workflow_descriptions=(
        prose.WORKFLOW_DESCRIPTION,
        prose.SCOPE_DESCRIPTION,
    ),
    examples_framing=prose.EXAMPLES_FRAMING,
    brand_guidance_path=_APP_PKG / "knowledge" / "brand-guidance.md",
    domain_knowledge_path=_APP_PKG / "knowledge" / "acme-mail-domain.md",
    build_response=build_response,
    build_text_response=build_text_response,
    question_policy=_no_question_policy,
    stub_tools=STUB_TOOLS,
    live_toolset_factory=_live_toolset,
)
"
`;

exports[`custom kind, no opt-ins > writes the expected tree and generated files > files 1`] = `
[
  "acme-mail-catalog/.gitignore",
  "acme-mail-catalog/README.md",
  "acme-mail-catalog/catalogs/v0.9.1/catalog.json",
  "acme-mail-catalog/package.json",
  "acme-mail-catalog/scripts/copy-theme.mjs",
  "acme-mail-catalog/src/catalog-id.ts",
  "acme-mail-catalog/src/catalog.parity.test.ts",
  "acme-mail-catalog/src/catalog.registry.ts",
  "acme-mail-catalog/src/catalog.test.ts",
  "acme-mail-catalog/src/catalog.ts",
  "acme-mail-catalog/src/components/text/index.ts",
  "acme-mail-catalog/src/components/text/text.schema.ts",
  "acme-mail-catalog/src/components/text/text.test.tsx",
  "acme-mail-catalog/src/components/text/text.tsx",
  "acme-mail-catalog/src/css.d.ts",
  "acme-mail-catalog/src/functions/README.md",
  "acme-mail-catalog/src/index.ts",
  "acme-mail-catalog/src/provider.test.tsx",
  "acme-mail-catalog/src/provider.tsx",
  "acme-mail-catalog/src/theme.css",
  "acme-mail-catalog/tsconfig.json",
  "acme-mail-catalog/vitest.config.ts",
  "acme-mail-catalog/vitest.setup.ts",
  "agent/.env.example",
  "agent/.gitignore",
  "agent/.python-version",
  "agent/README.md",
  "agent/app/__init__.py",
  "agent/app/__main__.py",
  "agent/app/card.py",
  "agent/app/config.py",
  "agent/app/fixtures/deterministic/greeting.json",
  "agent/app/fixtures/stub/greeting.json",
  "agent/app/knowledge/acme-mail-domain.md",
  "agent/app/knowledge/brand-guidance.md",
  "agent/app/knowledge/examples/greeting.json",
  "agent/app/mcp.py",
  "agent/app/prose.py",
  "agent/app/responses.py",
  "agent/app/tools.py",
  "agent/pyproject.toml",
  "agent/scripts/record_beats.py",
  "agent/tests/__init__.py",
  "agent/tests/helpers.py",
  "agent/tests/test_agent_card.py",
  "agent/tests/test_catalog.py",
  "agent/tests/test_conformance.py",
  "agent/tests/test_executor.py",
  "agent/tests/test_knowledge_examples.py",
  "agent/tests/test_llm_agent.py",
  "agent/tests/test_llm_prompt.py",
  "agent/tests/test_llm_tools.py",
  "agent/tests/test_responses.py",
  "agent/tests/test_server.py",
  "manifest.json",
]
`;

exports[`custom kind, no opt-ins > writes the expected tree and generated files > mcp.py 1`] = `
""""Live Acme Mail MCP toolset.

TODO: point MCP_URL at Acme Mail's MCP server, supply its credential in \`headers\`, then
delete the not-wired guard. The credential comes from \`.env\` (see \`.env.example\`); the
agent never runs a consent flow of its own. Every failure fails fast rather than degrading
to canned data — the stub is only ever \`--mode stub\`.
"""

from __future__ import annotations

import os

from google.adk.tools.mcp_tool import StreamableHTTPConnectionParams

from a2ui_agent_kit.toolset import PolicyMcpToolset

__all__ = ["MCP_URL", "LiveToolsetNotWiredError", "build_live_toolset", "headers"]

# TODO: the Acme Mail MCP server's streamable-HTTP endpoint.
MCP_URL = ""

# Optional: pin the tool inventory client-side (\`tool_filter\`) once you know which of the
# server's tools this agent should hold. Empty means every tool the server exposes.
TOOL_FILTER: tuple[str, ...] = ()


class LiveToolsetNotWiredError(RuntimeError):
    """Raised by \`--mode live\` until MCP_URL is set."""


def headers() -> dict[str, str]:
    """The request headers carrying the credential. TODO: match Acme Mail's auth scheme."""
    token = os.environ.get("VENDOR_TOKEN")
    if not token:
        raise LiveToolsetNotWiredError(
            "VENDOR_TOKEN is not set. The live agent sends it as a bearer token on every "
            "Acme Mail MCP call; set it in agent/.env. To run against canned fixture data "
            "instead, run with --mode stub."
        )
    return {"Authorization": f"Bearer {token}"}


def build_live_toolset() -> PolicyMcpToolset:
    """Constructs the live MCP toolset. Construction is offline: the toolset stores its
    connection parameters and connects only when its tools are first listed."""
    if not MCP_URL:
        raise LiveToolsetNotWiredError(
            "--mode live is not wired yet: set MCP_URL in app/mcp.py to Acme Mail's MCP "
            "server. Until then, run with --mode stub or --mode deterministic."
        )
    return PolicyMcpToolset(
        connection_params=StreamableHTTPConnectionParams(url=MCP_URL, headers=headers()),
        tool_filter=list(TOOL_FILTER) or None,
    )
"
`;
